--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -100,5 +100,76 @@
         "vacancies4_role": "Exterier Dizayner",
         "vacancies4_direction": "Dizayn, mahsulot va arxitektura boshqaruvi",
         "vacancies4_format": "Remote"
+    },
+    "projects1": {
+        "title": "Balance",
+        "subtitle": "Hayotingiz balansini saqlash uchun eng to‘g‘ri tanlov!",
+        "button_text1": "Ariza qoldirish",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Chilonzor tumani",
+        "place_location": "Chilonzor tumani Archa ko’chasi, 12/5",
+        "school": "Maktab",
+        "school_location": "105 maktab gacha 10 daqiqalik yo’l",
+        "business_center": "Biznes markazi",
+        "business_center_location": "Apex biznes markazi uchun 5 daqiqalik yo’l",
+        "sports_complex": "Sport kompleksi",
+        "sports_complex_location": "Altius sport kompleksi uchun 15 daqiqalik yo’l",
+        "desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.",
+        "fact_card1": "Yaxshi lokatsia",
+        "fact_card2": "ILG’OR ARXITEKTURA",
+        "fact_card3": "Sport uchun mahsus zallar",
+        "fact_card4": "Ko’rkam Bog’ bolalar maydoni",
+        "fact_card5": "Nafis Dizayn",
+        "area": "1.7 ga",
+        "area_title": "Loyiha maydoni",
+        "home_count": "247",
+        "home_count_title": "Uylar soni",
+        "floor": "12",
+        "floor_title": "Qavvatlar soni",
+        "calculator": "Kalkulyator",
+        "calculator_title": "Binoni tanlang",
+        "area_input": "Kvadraturani kiriting",
+        "block1": "A Blok",
+        "block2": "B Blok",
+        "block3": "C Blok",
+        "block4": "D Blok",
+        "floor1": "1 qavat",
+        "floor2": "2 qavat",
+        "floor3": "3 qavat",
+        "calculator_business": "Biznes markazi",
+        "area_sum": "$20",
+        "area_sum_text": "Har bir m² uchun",
+        "total_amount": "Umumiy summa",
+        "calculator_button": "Band qilish",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "5 min Bog'gacha",
+        "foot_text2": "5 min Supermarketgacha",
+        "foot_text3": "5 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "5 min Bog'gacha",
+        "car_text2": "5 min Supermarketgacha",
+        "car_text3": "5 min Poliklinikagacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "footer":{
+        "links_title1": "INFO",
+        "links1": "Biz haqimizda",
+        "links2": "Yangiliklar",
+        "links3": "Kontakt",
+        "links4": "Vakansiyalar",
+        "links5": "Lokatsiya",
+        "links6": "Kredit Kalkulyator",
+        "links_title2": "LOYIHALAR",
+        "links7": "Balance",
+        "links8": "Gorizont",
+        "links9": "Brooklyn",
+        "links10": "Yangi hayot",
+        "title": "FIRST CLASS development",
+        "location": "Toshkent shahri Yunusobod tumani, Yangi shahar 64A uy",
+        "call_center":"Call center"
     }
 }
