--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -66,8 +66,21 @@
         "title": "Hamkorlarimiz"
     },
     "news": {
-        "title": "Yangiliklar",
-        "card1_title": "Do'stlaringiz bilan qo'shni bo'ling va bonusga ega bo'ling!"
+        "home_title": "Yangiliklar",
+        "news_page_title": "Yangiliklar",
+        "news_page_subtitle": "Kompaniyamiz dagi eng so’nggi yangiliklar bilan tanishing",
+        "news_page_body_title": "Yangiliklar",
+        "news_detail_title1": "Do'stlaringiz bilan qo'shni bo'ling va bonusga ega bo'ling!",
+        "news_detail_title2": "O‘xshash yangiliklar",
+        "sana": "Sana",
+        "all": "Barchasi",
+        "aksiya": "Aksiyalar",
+        "type_news": "Yangiliklar",
+        "card1_title": "Do'stlaringiz bilan qo'shni bo'ling va bonusga ega bo'ling!",
+        "card1_more_title": "“Orient Group” va “Golden House” kompaniyalari “Anhor” va “Navro‘z” bog‘lari atrofidagi vaziyatga izoh berdi",
+        "card1_info": "So‘nggi paytlarda ommaviy axborot vositalari va ijtimoiy tarmoqlarda “Anhor” va “Navro‘z” istirohat bog‘lari hududida ko‘p qavatli uylar qurilayotgani haqida xabarlar tarqaldi. Ular bilan bir qatorda, ushbu bog'lar hududida joylashgan loyihaning vizualizatsiyasi tarqatiladi. Orient Group Management rasmiy ravishda na Golden House ishlab chiqaruvchisi, na Orient guruhining boshqa korxonalari ushbu loyihani amalga oshirishni va ushbu saytda qurishni rejalashtirmaganligini rasman e'lon qiladi. Internetda aylanib yurgan renderlar 2024 yilda kompaniyani tark etgan Oltin uyning sobiq xodimining ichki taqdimotidan olingan. Bundan tashqari: ishchi guruhlar muntazam ravishda kompaniya va tashqi hamkorlar tomonidan ko'rib chiqish uchun turli loyihalarni taqdim etadilar, lekin ularning hammasi ham oxir-oqibat ma'qullanmaydi. Oltin uyga bunday niyatlarni bildirgan nashrlar bizni juda hayratda qoldirdi. Toshkentliklarning noroziligiga sabab bo‘lgan kompaniyaning ichki taqdimotidagi ma’lumotlarni kim va qanday maqsadda internetga joylaganini bilmaymiz. Afsuski, ushbu masalani yoritayotgan OAV vakillari va blogerlarning hech biri bizga rasmiy tushuntirish olish uchun murojaat qilmadi. Orient Group Management va Golden House jurnalistlar va bloggerlarni zarur hollarda kompaniya matbuot xizmatlariga birinchi qo‘ldan operativ ma’lumot olish uchun rasmiy so‘rovlar yuborishga taklif qiladi.",
+        "card1_full_day": "20 Fevral 2025",
+        "card1_day": "12/03/2025"
     },
     "video_page": {
         "title": "Bizning qurib bitkazilgan majmualarimiz haqida",
