--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -8,7 +8,7 @@
         "nav_button": "Konsultatsiya olish"
     },
     "hero": {
-        "title": "Qurilish kompaniyasi nomi",
+        "title": "Ross Foundation",
         "subtitle": "Qurilish Toshkent shahrida joylashgan",
         "button_text": "Konsultatsiya olish"
     },
@@ -19,34 +19,38 @@
     },
     "about": {
         "title": "KOMPANIYA HAQIDA",
-        "desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose",
+        "desc": "Ross and Foundation – Ishonchli Qurilish Hamkoringiz <br/> 10 yillik tajriba bilan biznes markazlari va turar-joy binolari qurilishida yetakchi kompaniya! <br/> Ross and Foundation – Toshkentning zamonaviy arxitektura manzarasini yaratishda muhim o‘rin tutuvchi qurilish kompaniyasi. Biz 10 yildan beri biznes markazlari va yuqori sifatli turar-joy majmualarini barpo etib kelamiz.",
         "card1_title": "Kompaniya portfelidagi loyihalar",
-        "card1_desc": "3 ta",
+        "card1_desc": "4 ta",
         "card2_title": "Ko'chmas mulk bozorida",
-        "card2_desc": "5 yil",
+        "card2_desc": "6 yil",
         "card3_title": "Bizning loyihalarimizda odamlar yashaydi",
         "card3_desc": "1000",
         "card4_title": "Turar joy hududlari M2",
-        "card4_desc": "77 000",
-        "fact_title": "Kompaniya haqida 5 ta fakt",
-        "fact_desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English",
-        "fact_card1": "Ko’p yillik tajriba",
-        "fact_card2": "Har qanday qurilish loyihalari",
-        "fact_card3": "Sifat va ishonchlilik kafolati",
-        "fact_card4": "Individual yondashuv",
-        "fact_card5": "Sifat va ishonchlilik kafolati"
+        "card4_desc": "34 300",
+        "fact_title": "Kompaniya haqida 5 ta fakt", 
+        "fact_desc": "Ross and Foundation – 10 yildan beri biznes markazlari va turar-joy majmualarini barpo etib kelayotgan ishonchli qurilish kompaniyasi. Biz yuqori sifat va zamonaviy dizaynni hamma uchun qulay va mavjud qilishga intilamiz. Loyihalarimiz nafaqat mustahkamligi, balki funksionalligi va qulay joylashuvi bilan ham ajralib turadi.",
+        "fact_card1": "Zamonaviy dizayn va funksionallik",
+        "fact_card2": "Ishonchli hamkorlik",
+        "fact_card3": "Yuqori sifatli materiallar",
+        "fact_card4": "Qulay joylashuv",
+        "fact_card5": "Samarali muhandislik yechimlari"
     },
     "project": {
         "project_title": "Toshkentdagi Bizning qurib bitkazilgam majmualarimiz",
-        "project_desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English",
+        "project_desc": "Bizning loyihalarimiz zamonaviy biznes markazlari va turar-joy majmualarini o‘z ichiga oladi. CentraVista va Nurafshon biznes markazlari tadbirkorlar uchun qulay ofis muhitini ta’minlaydi. Asia Medline sog‘liqni saqlash va texnologiyalar uyg‘unligi bo‘lsa, The Knowledge Center zamonaviy ta’lim uchun innovatsion makondir.",
         "filter_button1": "Barchasi",
         "filter_button2": "Qurilishi yakunlangan",
         "filter_button3": "Qurilish jarayonida",
         "card_button": "Narxini bilish",
-        "card1_title": "Yunusobod Yangi Mo’jiza",
-        "card1_location": "Yunusobod t. Yettichinor koʻchasi",
-        "card2_title": "Qoyliq yangi mavze",
-        "card2_location": "Qo’yliq t. Farobiy koʻchasi",
+        "card1_title": "CentraVista Biznes Markazi",
+        "card1_location": "Abdulla Qodiriy ko‘chasi, Toshkent",
+        "card2_title": "Nurafshon Biznes Markazi",
+        "card2_location": "Tarix ko‘chasi, Toshkent",
+        "card3_title": "Asia Medline",
+        "card3_location": "Yunusobod tumani, Toshkent",
+        "card4_title": "The Knowledge Center",
+        "card4_location": "243-maktab hududi, Toshkent",
         "sold": "Sotib bo’lingan"
     },
     "project_map": {
@@ -133,31 +137,87 @@
         "file_error2": "Fayl hajmi 5MB dan oshmasligi kerak!"
     },
     "projects1": {
-        "title": "Balance",
-        "subtitle": "Hayotingiz balansini saqlash uchun eng to‘g‘ri tanlov!",
+        "title": "CentraVista Biznes Markazi",
+        "subtitle": "Toshkentning yuragidagi A-Class biznes markazi",
         "button_text1": "Ariza qoldirish",
         "button_text2": "Qo'ng'iroq qilish",
-        "place": "Chilonzor tumani",
-        "place_location": "Chilonzor tumani Archa ko’chasi, 12/5",
+        "place": "Yunusobod tumani",
+        "place_location": "Abdulla Qodiriy ko‘chasi, Toshkent",
         "school": "Maktab",
-        "school_location": "105 maktab gacha 10 daqiqalik yo’l",
-        "business_center": "Biznes markazi",
-        "business_center_location": "Apex biznes markazi uchun 5 daqiqalik yo’l",
+        "school_location": "43 maktab gacha 10 daqiqalik yo’l",
+        "business_center": "",
+        "business_center_location": "",
         "sports_complex": "Sport kompleksi",
-        "sports_complex_location": "Altius sport kompleksi uchun 15 daqiqalik yo’l",
-        "image_desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.",
+        "sports_complex_location": "Chekhov Yulduz sport kompleksi uchun 3 daqiqalik yo’l",
+        "image_desc": "CentraVista – bu nafaqat ofis binosi, balki sizning biznesingiz uchun premium darajadagi imkoniyatlarni taqdim etuvchi zamonaviy ekotizimdir.",
         "fact_title": "Loyiha haqida 5 ta fakt",
-        "fact_desc": "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.",
-        "fact_card1": "Yaxshi lokatsia",
-        "fact_card2": "ILG’OR ARXITEKTURA",
-        "fact_card3": "Sport uchun mahsus zallar",
-        "fact_card4": "Ko’rkam Bog’ bolalar maydoni",
-        "fact_card5": "Nafis Dizayn",
-        "area": "1.7 ga",
+        "fact_desc": "Toshkentning markazida joylashgan premium biznes markazi Xalqaro kompaniyalar tanlagan ofis hududi – UCELL, TBC, PayMe, PWC, RSM, VFS Global (UK Visa Center) kabi yirik kompaniyalarning qarorgohi",
+        "fact_card1": "Zamonaviy ofis infratuzilmasi",
+        "fact_card2": "Qulay transport infratuzilmasi",
+        "fact_card3": "24/7 xavfsizlik va video nazorat tizimi",
+        "fact_card4": "Pro Xinkali",
+        "fact_card5": "ДУТЬ Lounge Bar",
+        "area": "2.5 ga",
         "area_title": "Loyiha maydoni",
-        "home_count": "247",
-        "home_count_title": "Uylar soni",
-        "floor": "12",
+        "home_count": "2",
+        "home_count_title": "Yerosti qavatlar",
+        "floor": "14",
+        "floor_title": "Qavvatlar soni",
+        "done_project": "2024",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "calculator": "Kalkulyator",
+        "calculator_title": "Binoni tanlang",
+        "area_input": "Kvadraturani kiriting",
+        "block1": "A Blok",
+        "block2": "B Blok",
+        "block3": "C Blok",
+        "block4": "D Blok",
+        "floor1": "1 qavat",
+        "floor2": "2 qavat",
+        "floor3": "3 qavat",
+        "calculator_business": "Biznes markazi",
+        "area_sum": "45",
+        "area_sum_text": "Har bir m² uchun",
+        "total_amount": "Umumiy summa",
+        "calculator_button": "Band qilish",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "5 min Metrogacha",
+        "foot_text2": "5 min Bozorgacha",
+        "foot_text3": "5 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "5 min Universitetgacha",
+        "car_text2": "5 min Maktabgacha",
+        "car_text3": "10 min Masjidgacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "projects2": {
+        "title": "Nurafshon Biznes Markazi",
+        "subtitle": "Zamonaviy biznes uchun funksional va qulay ofis maydoni",
+        "button_text1": "Ariza qoldirish",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Yunusobod tumani",
+        "place_location": "Abdulla Qodiriy ko‘chasi, Toshkent",
+        "school": "Maktab",
+        "school_location": "43 maktab gacha 10 daqiqalik yo’l",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "Sport kompleksi",
+        "sports_complex_location": "Chekhov Yulduz sport kompleksi uchun 3 daqiqalik yo’l",
+        "image_desc": "Nurafshon Biznes Markazi – samarali ish faoliyati uchun qulay va zamonaviy biznes makon!",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "Biznes markazi zamonaviy va funksional dizaynga ega bo‘lib, ergonomik ofis rejalashtiruvi bilan ajralib turadi. Binoning tashqi qismida joylashgan shaffof panoramali lift orqali shahar manzarasidan bahramand bo‘lish mumkin. Yorug‘ va keng ofis maydonlari tabiiy yoritish bilan ta’minlangan bo‘lib, samarali ish muhiti yaratishga xizmat qiladi.",
+        "fact_card1": "Toshkent markaziga yaqin joylashuv",
+        "fact_card2": "Panoramali lift tizimi",
+        "fact_card3": "Xavfsiz va muhofazalangan hudud",
+        "fact_card4": "Qulay va samarali ish muhiti",
+        "fact_card5": "Qulay transport va avtoturargoh imkoniyatlari",
+        "area": "0.28 ga",
+        "area_title": "Loyiha maydoni",
+        "home_count": "1",
+        "home_count_title": "Yerosti qavatlar",
+        "floor": "7",
         "floor_title": "Qavvatlar soni",
         "done_project": "2026",
         "done_project_title": "Qurilish bitkaziladigan sana",
@@ -172,20 +232,20 @@
         "floor2": "2 qavat",
         "floor3": "3 qavat",
         "calculator_business": "Biznes markazi",
-        "area_sum": "$20",
+        "area_sum": "23",
         "area_sum_text": "Har bir m² uchun",
         "total_amount": "Umumiy summa",
         "calculator_button": "Band qilish",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
-        "foot_text1": "5 min Bog'gacha",
-        "foot_text2": "5 min Supermarketgacha",
+        "foot_text1": "5 min Metrogacha",
+        "foot_text2": "5 min Bozorgacha",
         "foot_text3": "5 min Poliklinikagacha",
         "foot_text4": "5 min Kafe va Restoranlargacha",
         "car": "Avtomobilda",
-        "car_text1": "5 min Bog'gacha",
-        "car_text2": "5 min Supermarketgacha",
-        "car_text3": "5 min Poliklinikagacha",
+        "car_text1": "5 min Universitetgacha",
+        "car_text2": "5 min Maktabgacha",
+        "car_text3": "10 min Masjidgacha",
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
     "footer": {
