data add in progress...

--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -80,7 +80,7 @@
         "all": "Barchasi",
         "aksiya": "Aksiyalar",
         "type_news": "Yangiliklar",
-        "card1_title": "Do'stlaringiz bilan qo'shni bo'ling va bonusga ega bo'ling!",
+        "card1_title": "Anhor loyihasining qurilishi boshlandi – Premium restoranlar va mehmonxona!",
         "card1_more_title": "“Orient Group” va “Golden House” kompaniyalari “Anhor” va “Navro‘z” bog‘lari atrofidagi vaziyatga izoh berdi",
         "card1_info": "So‘nggi paytlarda ommaviy axborot vositalari va ijtimoiy tarmoqlarda “Anhor” va “Navro‘z” istirohat bog‘lari hududida ko‘p qavatli uylar qurilayotgani haqida xabarlar tarqaldi. Ular bilan bir qatorda, ushbu bog'lar hududida joylashgan loyihaning vizualizatsiyasi tarqatiladi. Orient Group Management rasmiy ravishda na Golden House ishlab chiqaruvchisi, na Orient guruhining boshqa korxonalari ushbu loyihani amalga oshirishni va ushbu saytda qurishni rejalashtirmaganligini rasman e'lon qiladi. Internetda aylanib yurgan renderlar 2024 yilda kompaniyani tark etgan Oltin uyning sobiq xodimining ichki taqdimotidan olingan. Bundan tashqari: ishchi guruhlar muntazam ravishda kompaniya va tashqi hamkorlar tomonidan ko'rib chiqish uchun turli loyihalarni taqdim etadilar, lekin ularning hammasi ham oxir-oqibat ma'qullanmaydi. Oltin uyga bunday niyatlarni bildirgan nashrlar bizni juda hayratda qoldirdi. Toshkentliklarning noroziligiga sabab bo‘lgan kompaniyaning ichki taqdimotidagi ma’lumotlarni kim va qanday maqsadda internetga joylaganini bilmaymiz. Afsuski, ushbu masalani yoritayotgan OAV vakillari va blogerlarning hech biri bizga rasmiy tushuntirish olish uchun murojaat qilmadi. Orient Group Management va Golden House jurnalistlar va bloggerlarni zarur hollarda kompaniya matbuot xizmatlariga birinchi qo‘ldan operativ ma’lumot olish uchun rasmiy so‘rovlar yuborishga taklif qiladi.",
         "card1_full_day": "20 Fevral 2025",
@@ -198,13 +198,13 @@
         "button_text1": "Ariza qoldirish",
         "button_text2": "Qo'ng'iroq qilish",
         "place": "Yunusobod tumani",
-        "place_location": "Abdulla Qodiriy ko‘chasi, Toshkent",
+        "place_location": "Tarix ko‘chasi, Toshkent",
         "school": "Maktab",
-        "school_location": "43 maktab gacha 10 daqiqalik yo’l",
+        "school_location": "28-sonli maktab gacha 25 daqiqalik yo’l",
         "business_center": "",
         "business_center_location": "",
-        "sports_complex": "Sport kompleksi",
-        "sports_complex_location": "Chekhov Yulduz sport kompleksi uchun 3 daqiqalik yo’l",
+        "sports_complex": "",
+        "sports_complex_location": "",
         "image_desc": "Nurafshon Biznes Markazi – samarali ish faoliyati uchun qulay va zamonaviy biznes makon!",
         "fact_title": "Loyiha haqida 5 ta fakt",
         "fact_desc": "Biznes markazi zamonaviy va funksional dizaynga ega bo‘lib, ergonomik ofis rejalashtiruvi bilan ajralib turadi. Binoning tashqi qismida joylashgan shaffof panoramali lift orqali shahar manzarasidan bahramand bo‘lish mumkin. Yorug‘ va keng ofis maydonlari tabiiy yoritish bilan ta’minlangan bo‘lib, samarali ish muhiti yaratishga xizmat qiladi.",
@@ -238,14 +238,70 @@
         "calculator_button": "Band qilish",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
-        "foot_text1": "5 min Metrogacha",
+        "foot_text1": "10 min Masjidgacha",
         "foot_text2": "5 min Bozorgacha",
-        "foot_text3": "5 min Poliklinikagacha",
+        "foot_text3": "10 min Poliklinikagacha",
         "foot_text4": "5 min Kafe va Restoranlargacha",
         "car": "Avtomobilda",
-        "car_text1": "5 min Universitetgacha",
-        "car_text2": "5 min Maktabgacha",
-        "car_text3": "10 min Masjidgacha",
+        "car_text1": "10 min Universitetgacha",
+        "car_text2": "10 min Maktabgacha",
+        "car_text3": "5 min Masjidgacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "projects3": {
+        "title": "Asia Medline",
+        "subtitle": "Sog‘liqni saqlash va innovatsion texnologiyalar uyg‘unligi",
+        "button_text1": "Ariza qoldirish",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Yunusobod tumani",
+        "place_location": "Tarix ko‘chasi, Toshkent",
+        "school": "Universitet",
+        "school_location": "28-sonli maktab gacha 25 daqiqalik yo’l",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "Asia Medline – zamonaviy sog‘liqni saqlash va dam olishning yangi nuqtasi!",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "Biznes markazi zamonaviy va funksional dizaynga ega bo‘lib, ergonomik ofis rejalashtiruvi bilan ajralib turadi. Binoning tashqi qismida joylashgan shaffof panoramali lift orqali shahar manzarasidan bahramand bo‘lish mumkin. Yorug‘ va keng ofis maydonlari tabiiy yoritish bilan ta’minlangan bo‘lib, samarali ish muhiti yaratishga xizmat qiladi.",
+        "fact_card1": "Ekologik va zamonaviy tibbiyot muassasasi",
+        "fact_card2": "Oila va farovonlik uchun mo‘ljallangan markaz",
+        "fact_card3": "Warpoint VR Game Zone",
+        "fact_card4": "Yuqori sifatli xizmat ko‘rsatish",
+        "fact_card5": "Shahar infratuzilmasi bilan uyg‘un joylashuv",
+        "area": "0.2 ga",
+        "area_title": "Loyiha maydoni",
+        "home_count": "1",
+        "home_count_title": "Yerosti qavatlar",
+        "floor": "3",
+        "floor_title": "Qavvatlar soni",
+        "done_project": "2026",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "calculator": "Kalkulyator",
+        "calculator_title": "Binoni tanlang",
+        "area_input": "Kvadraturani kiriting",
+        "block1": "A Blok",
+        "block2": "B Blok",
+        "block3": "C Blok",
+        "block4": "D Blok",
+        "floor1": "1 qavat",
+        "floor2": "2 qavat",
+        "floor3": "3 qavat",
+        "calculator_business": "Biznes markazi",
+        "area_sum": "23",
+        "area_sum_text": "Har bir m² uchun",
+        "total_amount": "Umumiy summa",
+        "calculator_button": "Band qilish",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "10 min Masjidgacha",
+        "foot_text2": "5 min Bozorgacha",
+        "foot_text3": "10 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "10 min Universitetgacha",
+        "car_text2": "10 min Maktabgacha",
+        "car_text3": "5 min Masjidgacha",
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
     "footer": {
