--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -56,15 +56,18 @@
     "project_map": {
         "title": "Toshkent bo‘yicha Loyihalarimiz",
         "subtitle": "Shahar bo‘ylab o‘zingizga qulay joylashuvdagi loyihamizda istiqomat qiling",
-        "location1_subtitle": "Toza havo",
-        "location1_title": "Luxury residence",
-        "location1_desc": "Chilonzor tumani",
-        "location2_subtitle": "Toza havo",
-        "location2_title": "Premium Apartments",
+        "location1_subtitle": "Premium ofislar",
+        "location1_title": "CentraVista Biznes Markazi",
+        "location1_desc": "Yunusobod tumani",
+        "location2_subtitle": "Zamonaviy ofis",
+        "location2_title": "Nurafshon Biznes Markazi",
         "location2_desc": "Yunusobod tumani",
-        "location3_subtitle": "Toza havo",
-        "location3_title": "Eco-friendly Homes",
-        "location3_desc": "Mirzo Ulug’bek tumani"
+        "location3_subtitle": "Innovatsion tibbiyot",
+        "location3_title": "Asia Medline",
+        "location3_desc": "Yunusobod tumani",
+        "location4_subtitle": "Innovatsion bilim markazi",
+        "location4_title": "The Knowledge Center",
+        "location4_desc": "Olamazor tumani"
     },
     "partners": {
         "title": "Hamkorlarimiz"
@@ -169,14 +172,11 @@
         "calculator_title": "Binoni tanlang",
         "area_input": "Kvadraturani kiriting",
         "block1": "A Blok",
-        "block2": "B Blok",
-        "block3": "C Blok",
-        "block4": "D Blok",
-        "floor1": "1 qavat",
-        "floor2": "2 qavat",
-        "floor3": "3 qavat",
+        "floor1": "2 qavat",
+        "floor2": "5 qavat",
+        "floor3": "6 qavat",
         "calculator_business": "Biznes markazi",
-        "area_sum": "45",
+        "area_sum": "30",
         "area_sum_text": "Har bir m² uchun",
         "total_amount": "Umumiy summa",
         "calculator_button": "Band qilish",
@@ -225,14 +225,16 @@
         "calculator_title": "Binoni tanlang",
         "area_input": "Kvadraturani kiriting",
         "block1": "A Blok",
-        "block2": "B Blok",
-        "block3": "C Blok",
-        "block4": "D Blok",
         "floor1": "1 qavat",
         "floor2": "2 qavat",
         "floor3": "3 qavat",
+        "floor4": "4 qavat",
+        "floor5": "5 qavat",
+        "floor6": "6 qavat",
+        "floor7": "7 qavat",
         "calculator_business": "Biznes markazi",
-        "area_sum": "23",
+        "area_sum1": "50",
+        "area_sum2": "20",
         "area_sum_text": "Har bir m² uchun",
         "total_amount": "Umumiy summa",
         "calculator_button": "Band qilish",
@@ -251,19 +253,19 @@
     "projects3": {
         "title": "Asia Medline",
         "subtitle": "Sog‘liqni saqlash va innovatsion texnologiyalar uyg‘unligi",
-        "button_text1": "Ariza qoldirish",
+        "button_text1": "",
         "button_text2": "Qo'ng'iroq qilish",
         "place": "Yunusobod tumani",
-        "place_location": "Tarix ko‘chasi, Toshkent",
-        "school": "Universitet",
-        "school_location": "28-sonli maktab gacha 25 daqiqalik yo’l",
+        "place_location": "Osiyo ko‘chasi, Toshkent",
+        "school": "Institut",
+        "school_location": "TIQXMMI gacha 25 daqiqalik yo’l",
         "business_center": "",
         "business_center_location": "",
         "sports_complex": "",
         "sports_complex_location": "",
         "image_desc": "Asia Medline – zamonaviy sog‘liqni saqlash va dam olishning yangi nuqtasi!",
         "fact_title": "Loyiha haqida 5 ta fakt",
-        "fact_desc": "Biznes markazi zamonaviy va funksional dizaynga ega bo‘lib, ergonomik ofis rejalashtiruvi bilan ajralib turadi. Binoning tashqi qismida joylashgan shaffof panoramali lift orqali shahar manzarasidan bahramand bo‘lish mumkin. Yorug‘ va keng ofis maydonlari tabiiy yoritish bilan ta’minlangan bo‘lib, samarali ish muhiti yaratishga xizmat qiladi.",
+        "fact_desc": "Asia Medline – bu sog‘liqni saqlash va innovatsion texnologiyalar uyg‘unligi bo‘lgan zamonaviy tibbiyot muassasasi bo‘lib, Toshkentning Yunusobod tumanida qulay joylashuvga ega. Markaz nafaqat yuqori sifatli tibbiy xizmatlarni, balki o‘quv va maslahat xonalari, keng kutish zallari hamda Warpoint VR Game Zone kabi dam olish imkoniyatlarini ham taqdim etadi. 24/7 xavfsizlik tizimi va ilg‘or texnologiyalar bilan jihozlangan Asia Medline, oilalar uchun qulay muhit yaratib, sog‘lom hayot kechirishga xizmat qiladi.",
         "fact_card1": "Ekologik va zamonaviy tibbiyot muassasasi",
         "fact_card2": "Oila va farovonlik uchun mo‘ljallangan markaz",
         "fact_card3": "Warpoint VR Game Zone",
@@ -275,18 +277,11 @@
         "home_count_title": "Yerosti qavatlar",
         "floor": "3",
         "floor_title": "Qavvatlar soni",
-        "done_project": "2026",
+        "done_project": "2025",
         "done_project_title": "Qurilish bitkaziladigan sana",
         "calculator": "Kalkulyator",
         "calculator_title": "Binoni tanlang",
         "area_input": "Kvadraturani kiriting",
-        "block1": "A Blok",
-        "block2": "B Blok",
-        "block3": "C Blok",
-        "block4": "D Blok",
-        "floor1": "1 qavat",
-        "floor2": "2 qavat",
-        "floor3": "3 qavat",
         "calculator_business": "Biznes markazi",
         "area_sum": "23",
         "area_sum_text": "Har bir m² uchun",
@@ -294,14 +289,59 @@
         "calculator_button": "Band qilish",
         "location_title": "Joylashuvning qulayligi",
         "foot": "Piyoda",
-        "foot_text1": "10 min Masjidgacha",
-        "foot_text2": "5 min Bozorgacha",
+        "foot_text1": "20 min Maktabgacha",
+        "foot_text2": "20 min Institutgacha",
+        "foot_text3": "15 min Poliklinikagacha",
+        "foot_text4": "5 min Kafe va Restoranlargacha",
+        "car": "Avtomobilda",
+        "car_text1": "10 min Institutgacha",
+        "car_text2": "10 min Maktabgacha",
+        "car_text3": "10 min Metrogacha",
+        "car_text4": "5 min Kafe va Restoranlargacha"
+    },
+    "projects4": {
+        "title": "The Knowledge Center",
+        "subtitle": "Ilm va innovatsiyalar uchrashgan maskan",
+        "button_text1": "",
+        "button_text2": "Qo'ng'iroq qilish",
+        "place": "Olamazor tumani",
+        "place_location": "Beruniy Shoh ko'chasi, Toshkent",
+        "school": "",
+        "school_location": "",
+        "business_center": "",
+        "business_center_location": "",
+        "sports_complex": "",
+        "sports_complex_location": "",
+        "image_desc": "The Knowledge Center – kelajak avlodni innovatsion bilimlar bilan ta’minlash uchun yaratilgan zamonaviy ta’lim markazi!",
+        "fact_title": "Loyiha haqida 5 ta fakt",
+        "fact_desc": "The Knowledge Center – bu 1 200 nafar o‘quvchi uchun mo‘ljallangan zamonaviy ta’lim markazi bo‘lib, ilmiy va texnologik rivojlanishga yo‘naltirilgan. Markaz kimyo va kompyuter fanlari uchun ilg‘or laboratoriyalar, innovatsion ta’lim uslublari va interaktiv o‘quv dasturlari bilan o‘quvchilarning amaliy ko‘nikmalarini rivojlantirishga xizmat qiladi. Toshkentdagi 243-maktab hududida joylashgan ushbu maskan, yorug‘ va qulay sinfxonalari bilan ta’lim sifatini oshirishga hamda kelajak avlodni innovatsion bilimlar bilan ta’minlashga qaratilgan.",
+        "fact_card1": "Shaharning ta’lim infratuzilmasiga qo‘shilgan muhim hissa",
+        "fact_card2": "Innovatsion o‘quv muhitini ta’minlovchi infratuzilma",
+        "fact_card3": "Ta’lim sifatini oshirishga yo‘naltirilgan yondashuv",
+        "fact_card4": "Yorug‘ va qulay o‘quv muhitiga ega binolar",
+        "fact_card5": "Ilmiy va texnologik rivojlanish markazi",
+        "area": "0.45 ga",
+        "area_title": "Loyiha maydoni",
+        "floor": "4",
+        "floor_title": "Qavvatlar soni",
+        "done_project": "2024",
+        "done_project_title": "Qurilish bitkaziladigan sana",
+        "calculator": "Kalkulyator",
+        "calculator_title": "Binoni tanlang",
+        "area_input": "Kvadraturani kiriting",
+        "calculator_business": "Biznes markazi",
+        "area_sum": "23",
+        "area_sum_text": "Har bir m² uchun",
+        "total_amount": "Umumiy summa",
+        "calculator_button": "Band qilish",
+        "location_title": "Joylashuvning qulayligi",
+        "foot": "Piyoda",
+        "foot_text1": "10 min Metrogacha",
         "foot_text3": "10 min Poliklinikagacha",
         "foot_text4": "5 min Kafe va Restoranlargacha",
         "car": "Avtomobilda",
-        "car_text1": "10 min Universitetgacha",
-        "car_text2": "10 min Maktabgacha",
-        "car_text3": "5 min Masjidgacha",
+        "car_text1": "5 min Metrogacha",
+        "car_text2": "5 min Poliklinikagacha",
         "car_text4": "5 min Kafe va Restoranlargacha"
     },
     "footer": {
@@ -318,7 +358,7 @@
         "links9": "Brooklyn",
         "links10": "Yangi hayot",
         "title": "FIRST CLASS development",
-        "location": "Toshkent shahri Yunusobod tumani, Yangi shahar 64A uy",
+        "location": "Toshkent shahri, Yunusobod tumani, Abdulla Qodiriy ko‘chasi, 1A-uy",
         "call_center": "Call center",
         "text1":"©All rights reserved",
         "text2":"© 2025 «COMPANIYA NOMI» MChJ"
