--- a/src/utils/i18n/locals/uz/uz.json
+++ b/src/utils/i18n/locals/uz/uz.json
@@ -84,10 +84,20 @@
         "aksiya": "Aksiyalar",
         "type_news": "Yangiliklar",
         "card1_title": "Anhor loyihasining qurilishi boshlandi – Premium restoranlar va mehmonxona!",
-        "card1_more_title": "“Orient Group” va “Golden House” kompaniyalari “Anhor” va “Navro‘z” bog‘lari atrofidagi vaziyatga izoh berdi",
-        "card1_info": "So‘nggi paytlarda ommaviy axborot vositalari va ijtimoiy tarmoqlarda “Anhor” va “Navro‘z” istirohat bog‘lari hududida ko‘p qavatli uylar qurilayotgani haqida xabarlar tarqaldi. Ular bilan bir qatorda, ushbu bog'lar hududida joylashgan loyihaning vizualizatsiyasi tarqatiladi. Orient Group Management rasmiy ravishda na Golden House ishlab chiqaruvchisi, na Orient guruhining boshqa korxonalari ushbu loyihani amalga oshirishni va ushbu saytda qurishni rejalashtirmaganligini rasman e'lon qiladi. Internetda aylanib yurgan renderlar 2024 yilda kompaniyani tark etgan Oltin uyning sobiq xodimining ichki taqdimotidan olingan. Bundan tashqari: ishchi guruhlar muntazam ravishda kompaniya va tashqi hamkorlar tomonidan ko'rib chiqish uchun turli loyihalarni taqdim etadilar, lekin ularning hammasi ham oxir-oqibat ma'qullanmaydi. Oltin uyga bunday niyatlarni bildirgan nashrlar bizni juda hayratda qoldirdi. Toshkentliklarning noroziligiga sabab bo‘lgan kompaniyaning ichki taqdimotidagi ma’lumotlarni kim va qanday maqsadda internetga joylaganini bilmaymiz. Afsuski, ushbu masalani yoritayotgan OAV vakillari va blogerlarning hech biri bizga rasmiy tushuntirish olish uchun murojaat qilmadi. Orient Group Management va Golden House jurnalistlar va bloggerlarni zarur hollarda kompaniya matbuot xizmatlariga birinchi qo‘ldan operativ ma’lumot olish uchun rasmiy so‘rovlar yuborishga taklif qiladi.",
-        "card1_full_day": "20 Fevral 2025",
-        "card1_day": "12/03/2025"
+        "card1_more_title": "Ross Foundation kompaniyasi Anhor loyihasi qurilishining rasman boshlanganini e’lon qiladi!",
+        "card1_info": "Mazkur loyiha <b>Alisher Navoiy ko‘chasida</b> joylashgan bo‘lib, <b>premium restoranlar va hashamatli mehmonxona</b> bilan shaharning eng nufuzli maskanlaridan biriga aylanadi. <b>Zamonaviy arxitektura, sifatli materiallar va betakror dizayn</b> asosida qurilayotgan ushbu majmua mehmonlarga yuqori darajadagi xizmat ko‘rsatishni ta’minlaydi. </br></br> <b>Biz bilan yangiliklardan xabardor bo‘ling!</b> </br>📍 <b>Manzil</b>: Alisher Navoiy ko‘chasi </b> </br> 🏗 <b>Loyiha turi</b>: Premium restoranlar va hashamatli mehmonxona  </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
+        "card1_full_day": "20 Mart 2025",
+        "card1_day": "20/03/2025",
+        "card2_title": "Nurafshon Biznes Markazida ijara boshlandi!  ",
+        "card2_more_title": "Ross Foundation kompaniyasi Nurafshon Biznes Markazi binolarini ijaraga berishni boshladi!",
+        "card2_info": "Nurafshon ko‘chasi, Tarix 69 manzilida joylashgan 7 qavatli biznes markazi va bitta yer osti qavati yuqori qavatlardan ajoyib manzaralarni hamda restoranlar, ofislar, kоворking markazlari, kafelar va boshqa tadbirkorlik faoliyatlari uchun ideal joyni taqdim etadi.   </br> </br> Nega aynan Nurafshon Biznes Markazi?   </br>✅ Zamonaviy ofis maydonlari – Keng va qulay interyerlar </br>  ✅ Yuqori qavatlardan panoramik manzara – Ish muhitingizni yanada yaxshilang </br>  ✅ Moslashuvchan ijara shartlari – Qisqa va uzoq muddatli ijara imkoniyati  </br>✅ Har xil biznes turlari uchun qulay – Restoranlar, ofislar, kоворking, kafelar va boshqalar  </br>✅ Zamonaviy infratuzilma – Tezkor internet, 24/7 xavfsizlik va texnik xizmat  </br>✅ Qulay joylashuv – Muhim biznes markazlariga yaqinlik</br></br>💼 <b>Ofis va tijorat maydonlarini ijaraga oling!</b>  </br>📍 <b>Manzil</b>: Nurafshon ko‘chasi, Tarix 69  </br>📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
+        "card2_full_day": "20 Mart 2025",
+        "card2_day": "20/03/2025",
+        "card3_title": "Ross Foundation ishga qabul qilmoqda!",
+        "card3_more_title": "Ross Foundation kompaniyasi kengaymoqda va qurilish jamoamizni kuchaytirish uchun tajribali mutaxassislarni ishga qabul qilmoqda. Agar siz qurilish sohasida barqaror va istiqbolli ish izlayotgan bo‘lsangiz, biz sizni jamoamizda ko‘rishdan mamnun bo‘lamiz!",
+        "card3_info": "<b>Bo‘sh ish o‘rinlari:</b> </br> Elektrik </br> Santexnik </br> Proраб (Obyekt boshqaruvchisi) </br> Qurilish menejeri </br> <b>Biz taklif qilamiz:</b> </br>✅ Tajribaga qarab raqobatbardosh ish haqi </br> ✅ Barqaror ish va martaba o‘sish imkoniyatlari </br> ✅ Do‘stona va professional jamoa </br> ✅ Yirik qurilish loyihalarida ishtirok etish imkoniyati </br> <b>Kimni qidirmoqdamiz:</b> </br> Biz o‘z sohasida tajribaga ega, mas'uliyatli va yuqori sifatli ish olib borishga intiladigan mutaxassislarni izlayapmiz. Qurilish sohasidagi tajriba ma’qul keladi. </br></br> <b>Qanday ariza topshirish mumkin:</b> </br> Batafsil ma’lumot uchun veb-saytimizning 'Vakansiyalar' bo‘limiga tashrif buyuring. Ariza topshirish uchun rezyumeni elektron pochta orqali yuboring yoki telefon orqali bog‘laning. </br></br> 📧 <b>Email</b>: <a href='mailto:rossfoundationuz@gmail.com'>rossfoundationuz@gmail.com</a>  </br>📞 <b>Telefon</b>: <a href='tel: +998 99 986 70 07'> +998 99 986 70 07</a>",
+        "card3_full_day": "20 Mart 2025",
+        "card3_day": "20/03/2025"
     },
     "video_page": {
         "title": "Bizning qurib bitkazilgan majmualarimiz haqida",
@@ -111,7 +121,7 @@
         "table_title1": "Vakansiyalar",
         "table_title2": "Yo’nalish",
         "table_title3": "Ish formati",
-        "vacancies1_role": "Bosh xisobchi",
+        "vacancies1_role": "Prorab",
         "vacancies1_direction": "Buhgalteriya, Hisob-kitob",
         "vacancies1_format": "Ofisda ishlash",
         "vacancies2_role": "Injiner arxitektor",
@@ -132,8 +142,8 @@
         "email": "Email",
         "select_placeholder": "Vakansiyalar",
         "button_text": "Ariza topshirish",
-        "file_input_text1": "Drag files here or click to select files",
-        "file_input_text2": "Attach as many files as you like, each file should not exceed 5mb",
+        "file_input_text1": "Fayllarni bu yerga torting yoki fayllarni tanlash uchun bosing",
+        "file_input_text2": "Fayl 5mb dan oshmasligi kerak",
         "email_error": "Email noto‘g‘ri formatda!",
         "select_error": "Telefon raqam kiritilishi shart!",
         "file_error1": "Faqat .doc, .docx yoki .pdf fayllar qo‘llab-quvvatlanadi!",
@@ -357,7 +367,7 @@
         "links8": "Gorizont",
         "links9": "Brooklyn",
         "links10": "Yangi hayot",
-        "title": "FIRST CLASS development",
+        "title": "Ross Foundation",
         "location": "Toshkent shahri, Yunusobod tumani, Abdulla Qodiriy ko‘chasi, 1A-uy",
         "call_center": "Call center",
         "text1":"©All rights reserved",
