--- a/src/utils/i18n/locals/en/en.json
+++ b/src/utils/i18n/locals/en/en.json
@@ -363,14 +363,14 @@
         "links5": "Location",
         "links6": "Credit Calculator",
         "links_title2": "PROJECTS",
-        "links7": "Balance",
-        "links8": "Gorizont",
-        "links9": "Brooklyn",
-        "links10": "New Life",
+        "links7": "CentraVista Business Center",
+        "links8": "Nurafshon Business Center",
+        "links9": "Asia Medline",
+        "links10": "The Knowledge Center",
         "title": "Ross Foundation",
         "location": "Tashkent City, Yunusabad District, Abdulla Qodiriy Street, House 1A",
         "call_center": "Call Center",
         "text1": "© All rights reserved",
-        "text2": "© 2025 «COMPANY NAME» LLC"
+        "text2": "© 2025 «Ross Foundation» LLC"
     }
 }
