--- a/src/utils/i18n/locals/ru/ru.json
+++ b/src/utils/i18n/locals/ru/ru.json
@@ -363,14 +363,14 @@
         "links5": "Локация",
         "links6": "Кредитный калькулятор",
         "links_title2": "ПРОЕКТЫ",
-        "links7": "Balance",
-        "links8": "Gorizont",
-        "links9": "Brooklyn",
-        "links10": "Новая жизнь",
+        "links7": "Бизнес-центр CentraVista",
+        "links8": "Бизнес-центр Nurafshon",
+        "links9": "Asia Medline",
+        "links10": "The Knowledge Center",
         "title": "Ross Foundation",
         "location": "Город Ташкент, Юнусабадский район, улица Абдуллы Кадыри, дом 1А",
         "call_center": "Колл-центр",
         "text1": "© Все права защищены",
-        "text2": "© 2025 «НАЗВАНИЕ КОМПАНИИ» ООО"
+        "text2": "© 2025 «Ross Foundation» ООО"
     }
 }
